--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "validator": "^13.1.1"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "jest": "^26.1.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "env-cmd ./config/dev.env node index.js"
+    "start": "node src/app.js",
+    "dev": "env-cmd -f ./config/dev.env node src/app.js",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
+    "coverage": "jest --coverage"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
